@@ -12,6 +12,7 @@ Version 1.8.0+git:
        * wesnoth.get_map_size() -> wesnoth.current.map.playable_width/playable_height/border_size
        * wesnoth.place_shroud() -> wesnoth.sides.place_shroud()
        * wesnoth.remove_shroud() -> wesnoth.sides.remove_shroud()
+       * wesnoth.get_terrain() -> wesnoth.current.map[]
    * Deprecated `[get_numerical_minimum]`, `[get_numerical_maximum]` and `[reverse_value]`
    * Fixed a bug that made `[unknown_message]` not working
    * Bumped Wesnoth version requirement to 1.15.14
